<!--
  ~ Copyright (c) 2020 All right reserved.
  ~ Created by shiroyk, https://github.com/shiroyk
  -->

<resources>
    <string name="app_name">LightWord</string>
    <string name="nav_header_title">Light Word</string>
    <string name="nav_header_subtitle" translatable="false">共计学习233小时, 练习114154次</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="res_image" translatable="false">Image Description</string>

    <string name="title_home" translatable="false">主页</string>
    <string name="title_import" translatable="false">导入</string>
    <string name="title_data" translatable="false">数据</string>
    <string name="title_setting" translatable="false">设置</string>
    <string name="title_exercise" translatable="false">练习</string>
    <string name="title_about" translatable="false">关于</string>
    <string name="title_help" translatable="false">帮助</string>
    <string name="title_master_word" translatable="false">已经掌握</string>
    <string name="versionName" translatable="false">1.1.1</string>

    <string name="exercise_card_translation" translatable="false">这种麻醉状态不仅在法庭起了作用，而且还使我看到汉娜好像把我当成另一个爱过并渴望过她的人，一个我很熟悉但却不是我的那么一个人。</string>
    <string name="exercise_card_sentence" translatable="false">The anesthetic functioned not only in the courtroom, and not only to allow me to see Hanna as if it was someone else who had loved and desired her, someone I knew well but who wasn`t me.</string>
    <string name="exercise_card_meaning" translatable="false">麻醉的；感觉缺失的</string>
    <string name="exercise_card_pos" translatable="false">形容词</string>
    <string name="exercise_tips" translatable="false">未查询到数据,\n请尝试重新导入词汇数据</string>
    <string name="exercise_data_tips" translatable="false">未找到该单词之前练习的数据</string>
    <string name="exercise_fragment_exclude_dialog_title" translatable="false">是否已掌握该单词？</string>
    <string name="exercise_fragment_exclude_dialog_message" translatable="false">以后将不会再出现在复习计划中，\n如果想取消可在已掌握列表中删除。</string>
    <string name="string_target" translatable="false">今日: 0/100</string>
    <string name="exercise_fragment_today_target" translatable="false">今日: %d/%s</string>
    <string name="exercise_fragment_target_dialog_title" translatable="false">今日目标已完成！(%d/%d)</string>

    <string name="home_fragment_card_not_found_data" translatable="false">暂无数据</string>
    <string name="string_home_progress" translatable="false">以学习 %d/%d</string>
    <string name="string_home_review" translatable="false">待复习 %d</string>
    <string name="string_home_vtype" translatable="false">CET4</string>

    <string name="import_vocab_data_submenu" translatable="false">词汇数据</string>
    <string name="import_vocab_type_exist_title" translatable="false">该词汇分类已存在</string>
    <string name="import_vocab_type_exist_message" translatable="false">是否覆盖已存在或新增该词汇分类的词汇数据？</string>
    <string name="dialog_ensure" translatable="false">确认</string>
    <string name="dialog_cancel" translatable="false">取消</string>
    <string name="dialog_default" translatable="false">默认</string>
    <string name="dialog_url" translatable="false">下载地址</string>
    <string name="dialog_delete" translatable="false">删除</string>
    <string name="dialog_create" translatable="false">新建</string>
    <string name="dialog_save" translatable="false">保存</string>

    <string name="crash_send_failed" translatable="false">发送崩溃日志失败！</string>
    <string name="crash_send_succeeded" translatable="false">发送日志成功！</string>
    <string name="crash_dialog_title" translatable="false">检测到APP上次发生崩溃</string>
    <string name="crash_dialog_msg" translatable="false">是否发送崩溃日志？</string>
    <string name="crash_dialog_send" translatable="false">是</string>
    <string name="crash_dialog_dnot_send" translatable="false">否</string>

    <string name="source_url" translatable="false">https://github.com/shiroyk/LightWordAndroid</string>
    <string name="home_chart_menu_title_week" translatable="false">7天</string>
    <string name="home_chart_menu_title_tow_week" translatable="false">14天</string>
    <string name="home_chart_menu_title_month" translatable="false">30天</string>
    <string name="home_timeline_date_string" translatable="false">8/17 共323张</string>
    <string name="home_timeline_statistic_string" translatable="false">266｜57｜82%</string>
    <string name="tv_vocab_word_string" translatable="false">abandon</string>
    <string name="tv_vocab_statistic" translatable="false">0｜0</string>
    <string name="import_data" translatable="false">管理数据</string>
    <string name="mastered" translatable="false">已经掌握</string>
    <string name="create_vocab" translatable="false">新建词汇</string>
    <string name="delete_master_word_msg" translatable="false">是否将该词汇从已掌握列表删除？</string>
    <string name="delete_select_master_word_msg" translatable="false">是否将这些词汇从已掌握列表删除？</string>
    <string name="dialog_btn_mastered" translatable="false">已掌握</string>
    <string name="add_master_word_succuess_msg" translatable="false">%s 添加到已掌握列表成功！</string>
    <string name="no_exercise_data" translatable="false">暂无练习数据</string>
    <string name="no_mastered_word_msg" translatable="false">没有已掌握的单词</string>
    <string name="missing_vocab_data">未查询到词汇数据，\n请先导入词汇数据。</string>
    <string name="parse_vocab_data_error">解析词汇例句失败，\n请尝试重新导入词汇数据。</string>
    <string name="importing">导入中...</string>
    <string name="pos">词性</string>
    <string name="meaning">词义</string>
    <string name="vocab_type">词汇分类</string>
    <string name="create_vocab_type" translatable="false">新建词汇分类</string>
    <string name="select_vocab_type" translatable="false">选择词汇分类</string>
    <string name="select_old_vocab_type" translatable="false">源词汇分类</string>
    <string name="select_new_vocab_type" translatable="false">目标词汇分类</string>
    <string name="example">例句</string>
    <string name="translation">翻译</string>
    <string name="answer">回答</string>
    <string name="vocabulary">词汇</string>
    <string name="frequency">词频</string>
    <string name="zero">0</string>
    <string name="new_item">新建</string>
    <string name="new_vocab_title">新建词汇</string>
    <string name="edit_vocab_title">编辑词汇</string>
    <string name="delete_single_vocab">删除词汇</string>
    <string name="delete_select_vocab">删除选择的词汇</string>
    <string name="delete_single_vocab_msg">是否删除词汇 %s？\n这个操作将会删除这个词汇的学习数据！</string>
    <string name="delete_select_vocab_msg">确定要删除选择的词汇吗？\n这个操作将会删除这些词汇的学习数据！</string>
    <string name="create_collocation">新建更多搭配</string>
    <string name="create_example">新建更多例句</string>
    <string name="save_vocab_error">保存失败，词汇不能为空！</string>
    <string name="vocab_exist">%s 已存在</string>
    <string name="vocab_exist_msg">是否保存所修改的数据？</string>
    <string name="vocab_save_success">%s 保存成功！</string>
    <string name="vocab_save_fail_collcation_not_null">%s 保存失败，搭配不能为空！</string>
    <string name="example_del_fail_example_not_null">删除失败，例句不能为空！</string>
    <string name="success_delete_single_vocab">%s 删除成功！</string>
    <string name="all_vocab">全部词汇</string>
    <string name="order_vocab">排序方式</string>
    <string name="order_by_word">词汇</string>
    <string name="order_by_frequency">词频</string>
    <string name="order_by_correct">正确次数</string>
    <string name="order_by_wrong">错误次数</string>
    <string name="order_by_last_practice">最后练习</string>
    <string name="order_by_timestamp">下次练习</string>
    <string name="review_vocab">待复习</string>
    <string name="review_vocab_size">待复习(%d)</string>
    <string name="mastered_word">已掌握</string>
    <string name="master_word">已掌握(%d)</string>
    <string name="collect_word">复制到分类</string>
    <string name="delete_word">删除词汇</string>
    <string name="demaster_word">取消掌握</string>
    <string name="action_create_vocab" translatable="false">vocab</string>
    <string name="action_info" translatable="false">info</string>
    <string name="mean_and_pos">词义与词性</string>
    <string name="pronounce">读音</string>
    <string name="mulit_select_item_title">%d/%d</string>
    <string name="total_of">共%d条</string>
    <string name="deselect_all">退出选择</string>
    <string name="add_to_vocab_type">复制到词汇分类</string>
    <string name="delete_select_master_word_title">取消掌握已选择</string>
    <string name="add_select_master_word_title">掌握已选择</string>
    <string name="add_select_master_word_msg">是否将这些词汇添加至已掌握列表？</string>
    <string name="start_learn">开始学习</string>
    <string name="not_fount_vocab_type">保存失败，没有词汇分类，请先创建词汇分类！</string>
    <string name="success_collect_vocab">成功复制%d个至%s</string>
    <string name="success_collect_vocab_overwrite">, 覆盖%d个</string>
    <string name="success_delete_vocab">成功删除%s的%d个词汇</string>
    <string name="success_copy_exercise">成功复制%d个至%s</string>
    <string name="success_copy_update_exercise">成功复制%d个，覆盖%d个至%s</string>
    <string name="help_exercise">1. 练习界面中，点击进度⭕️可以快速添加到已掌握。</string>
    <string name="setting_copy_exercise">复制练习数据</string>
    <string name="setting_copy_exercise_subtitle">将一个分类的练习数据复制到另一个</string>
    <string name="insert_mode">导入方式</string>
    <string name="only_insert">仅插入</string>
    <string name="insert_and_update">插入并更新</string>
    <string name="copy_mode">复制方式</string>
    <string name="only_copy">仅复制</string>
    <string name="copy_and_update">复制并更新</string>
</resources>