<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020 All right reserved.
  ~ Created by shiroyk, https://github.com/shiroyk
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/title_home" />
        <item
            android:id="@+id/nav_data"
            android:icon="@drawable/ic_menu_import"
            android:title="@string/title_data" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_setting"
            android:title="@string/title_setting" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/title_about" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_help"
            android:title="@string/title_help" />
    </group>
</menu>