<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_tip"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:text="@string/exercise_tips"
        android:textSize="20sp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/exercise_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btn_prev_card"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/res_image"
            android:src="@drawable/ic_navigate_before" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <yk.shiroyk.lightword.ui.widget.ExerciseCardView
                android:id="@+id/exercise_card"
                android:layout_width="wrap_content"
                android:layout_height="260dp"
                app:cardCornerRadius="4dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true" />

        </LinearLayout>

        <ImageView
            android:id="@+id/btn_next_card"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/res_image"
            android:src="@drawable/ic_navigate_next" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_translation"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginHorizontal="45dp"
        android:paddingVertical="10dp"
        android:text="@string/exercise_card_translation"
        android:textColor="@color/cardTextColor"
        android:visibility="visible"
        app:autoSizeMaxTextSize="18sp"
        app:autoSizeMinTextSize="14sp"
        app:autoSizeStepGranularity="1sp"
        app:autoSizeTextType="uniform" />

    <TextView
        android:id="@+id/tv_e_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/exercise_data_tips"
        android:visibility="gone" />

    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_daily_target"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/string_target" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatToggleButton
            android:id="@+id/exercise_speech"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_toggle_volume"
            android:checked="false"
            android:text=""
            android:textOff=""
            android:textOn=""
            android:visibility="visible" />

    </LinearLayout>

</LinearLayout>