<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/res_image"
            android:scaleType="fitXY"
            android:src="@drawable/home_card_bg" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_home_title"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:gravity="bottom"
                android:scrollbars="none"
                android:text="@string/string_home_vtype"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@android:color/white"
                app:autoSizeMaxTextSize="24sp"
                app:autoSizeMinTextSize="18sp"
                app:autoSizeStepGranularity="1sp"
                app:autoSizeTextType="uniform" />

            <TextView
                android:id="@+id/tv_home_subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:text="@string/string_home_progress"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_start_exercise"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="开始学习"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:backgroundTint="@android:color/transparent"
                app:cornerRadius="5dp"
                app:rippleColor="#4FFFFFFF" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>